--- a/index.html
+++ b/index.html
@@ -709,7 +709,7 @@
           Email: cdogrunn@gmail.com<br />
         </div>
         <p>leave us a note:</p>
-        <form action="" id="form">
+        <form action="" id="form" netlify>
           <div class="w3-row-padding" style="margin: 0 -16px 8px -16px;">
             <div class="w3-half">
               <input id="name" class="w3-input w3-border w3-card-4" type="text" placeholder="Name" required name="Name" />
