little changes to parallax

--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
             <div class="align-items-center">
               <div class="">
                 <div class="welcome-text-1 margin2rem">
-                  <h1 class="font-weight-bold" >Call us at: 520-481-3956</h1>
+                  <h1 class="font-weight-bold" >Call us at: 520-534-7387</h1>
                   <h2 class="font-weight-bold"><span>24 hr</span><br>Emergency Service</h2>
                   <h4 class="font-weight-bold" >Hours 4 p.m - 9 p.m. <span>Standard rates apply</span></h4>
                   <a href="#service" class="w3-button backgroundblack w3-section">Sign up for Service</a>
@@ -562,7 +562,7 @@
       </div>
 
  <!-- reputation -->
- <div class="w3-padding-64 ">
+ <div class="w3-padding-64 "></div>
  <div id="reputation" class=" w3-row-padding ">
   <div class="w3-col l7 m6">
     <h1 class="w3-xxxlarge w3-text-blue"><b>Reputation</b></h1>
@@ -704,9 +704,9 @@
           <i class="fa fa-map-marker fa-fw w3-hover-opacity-blue w3-xlarge w3-margin-right"></i>
           Tucson, AZ<br />
           <i class="fa fa-phone fa-fw w3-hover-opacity-blue w3-xlarge w3-margin-right"></i>
-          Phone: 520-555-5555<br />
+          Phone: 520-534-7387<br />
           <i class="fa fa-envelope fa-fw w3-hover-opacity-blue w3-xlarge w3-margin-right"></i>
-          Email: cdogrunn@gmail.com<br />
+          Email: ecosean1@gmail.com<br />
         </div>
         <p>leave us a note:</p>
         <form action="" id="form" netlify>
